# graphite

./: .dockerignore  .gitignore  Dockerfile  PHASE2.md  PHASE2_PLAN.md  README.md  RELEASE_EVALUATION_REPORT.md
ai-layer/: README.md  intent_parser.py  test_intent_parser.py
examples/: sample-proposed-intent.json  sample-verification-result.json  verify-input.json  verify-malicious.json
graphite-core/: CHANGELOG.md  Cargo.toml  README.md
graphite-core/protocols/: jupiter-v6.json  memo-program.json  meteora-dlmm.json  orca-whirlpools.json  raydium-amm-v4.json  spl-token.json  squads-v4.json  stake-program.json  system-program.json  token-2022.json
graphite-core/src/: account_resolution.rs  benchmark.rs  cli.rs  confidence_engine.rs  cpi_chain.rs  lib.rs  manifest.rs  plugin_orchestrator.rs  policy_engine.rs  regression_engine.rs  risk_engine.rs  self_healing.rs  semantic_graph_store.rs  server.rs  simulation_integrity.rs  solana_types.rs  transaction_builder.rs  unknown_protocol_mode.rs  verification.rs
graphite-core/tests/: adversarial_handcrafted.rs  adversarial_tests.rs  confidence_engine_tests.rs  deep_extreme_tests.rs  extreme_adversarial.rs  hell_mode_tests.rs  integration_tests.rs  novel_attacks.rs  omega_red_team.rs  omega_red_team_regression.rs  real_exploit_tests.rs  real_onchain_exploits.rs  real_world_attacks.rs  self_healing_integration_test.rs
integrations/solana-agent-kit/: README.md  demo.ts  (+3 more)
python-ai-layer/: README.md  intent_parser.py  requirements.txt  test_intent_parser.py
schemas/: proposed-intent-v1.json  verification-result-v1.json
(+10 files in other folders)
