[package]
name = "graphite-core"
version = "0.1.0"
edition = "2021"
description = "Graphite — Transaction verification for Solana AI agents"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
bs58 = "0.5"
curve25519-dalek = "4"
hex = "0.4"
anyhow = "1"

# Server (feature-gated)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# CLI (feature-gated)
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["server", "cli"]
server = ["dep:axum", "dep:tokio"]
cli = ["dep:clap"]

[dev-dependencies]
proptest = "1.0"

[[bin]]
name = "graphite"
path = "src/bin/graphite.rs"
required-features = ["cli"]

[profile.test]
opt-level = 2
